# sql-ces-fabric

./: .gitattributes  .gitignore
.github/: dependabot.yml
.github/workflows/: build-loadgen.yml  deploy-infrastructure.yml
infrastructure/bicep/: main.bicep  main.bicepparam
infrastructure/bicep/modules/: container-instance.bicep  container-registry.bicep
infrastructure/scripts/: build-and-push.ps1  grant-sql-access.ps1
loadgen/: .gitignore  Dockerfile  README.md  pyproject.toml
loadgen/migrations/: 0001_initial_schema.py  0002_row_count_view.py  0003_schema_change_log.py
loadgen/src/loadgen/: __init__.py  generator.py  main.py
